--- a/.github/workflows/build-stationapplication.yaml
+++ b/.github/workflows/build-stationapplication.yaml
@@ -57,15 +57,19 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASS }}
 
-      - name: Tag push
-        id: push-db-docker
-        run: |
-            docker build -t ${{ env.REPO_DOCKER_HUB }}/station-db StationDemoDb
-
-            docker tag ${{ env.REPO_DOCKER_HUB }}/station-db:latest ${{ env.REPO_DOCKER_HUB }}/station-db:${{ github.event.inputs.docker_project_version}}
-
-            docker push ${{ env.REPO_DOCKER_HUB }}/station-db:${{ github.event.inputs.docker_project_version}}
+      - name: Build db docker
+        id: build-db-docker
+        run: docker build -t ${{ env.REPO_DOCKER_HUB }}/station-db StationDemoDb
         working-directory: current/application
+
+      - name: Tag db docker
+        id: tag-db-docker
+        run: docker tag ${{ env.REPO_DOCKER_HUB }}/station-db:latest ${{ env.REPO_DOCKER_HUB }}/station-db:${{ github.event.inputs.docker_project_version}}
+
+      - name: Push db docker
+        id: push-db-docker
+        run: docker push ${{ env.REPO_DOCKER_HUB }}/station-db:${{ github.event.inputs.docker_project_version}}
+        
  
 
 
@@ -139,11 +143,6 @@ jobs:
           name: backendwar
           path: current/application/spring-java/StationDemoWeb/docker/StationDemoSecureWeb.war
  
-      - name: debug
-        id: debug
-        run: ls
-        working-directory: current/application/spring-java/StationDemoWeb/docker
- 
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -151,16 +150,22 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASS }}
 
-      - name: Tag push
-        id: push-backend-docker
-        run: |
-            docker build -t ${{ env.REPO_DOCKER_HUB }}/station-back StationDemoWeb/docker
-
-            docker tag ${{ env.REPO_DOCKER_HUB }}/station-back:latest ${{ env.REPO_DOCKER_HUB }}/station-back:${{ github.event.inputs.docker_project_version}}
-
-            docker push ${{ env.REPO_DOCKER_HUB }}/station-back:${{ github.event.inputs.docker_project_version}}
+      - name: Build Backenddocker
+        id: build-backend-docker
+        run: docker build -t ${{ env.REPO_DOCKER_HUB }}/station-back StationDemoWeb/docker
         working-directory: current/application/spring-java
  
+      - name: Tag Backenddocker
+        id: tag-backend-docker
+        run: docker tag ${{ env.REPO_DOCKER_HUB }}/station-back:latest ${{ env.REPO_DOCKER_HUB }}/station-back:${{ github.event.inputs.docker_project_version}}
+ 
+            
+      - name: Push Backenddocker
+        id: push-backend-docker
+        run: docker push ${{ env.REPO_DOCKER_HUB }}/station-back:${{ github.event.inputs.docker_project_version}}
+ 
+
+            
 
   build_front:
     runs-on: ubuntu-latest
@@ -240,12 +245,7 @@ jobs:
         with:
           name: frontendangular
           path: current/application/StationDemoClient/station-angular4-poc/dockerwithnginx/
- 
-      - name: debug
-        id: debug
-        run: ls
-        working-directory: current/application/StationDemoClient/station-angular4-poc/dockerwithnginx/
- 
+
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -253,16 +253,21 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASS }}
 
-      - name: Tag push
-        id: push-frontendangular-docker
-        run: |
-            # Build
-            docker build -t ${{ env.REPO_DOCKER_HUB }}/station-front-nginx StationDemoClient/station-angular4-poc/dockerwithnginx/
-            
-            docker tag ${{ env.REPO_DOCKER_HUB }}/station-front-nginx:latest ${{ env.REPO_DOCKER_HUB }}/station-front-nginx:${{ github.event.inputs.docker_project_version}}"
-  
-            docker push ${{ env.REPO_DOCKER_HUB }}/station-front-nginx:${{ github.event.inputs.docker_project_version}}
+      - name: Build frontendangular docker
+        id: build-frontendangular-docker
+        run: docker build -t ${{ env.REPO_DOCKER_HUB }}/station-front-nginx StationDemoClient/station-angular4-poc/dockerwithnginx/
         working-directory: current/application
+ 
+      - name: Tag frontendangular docker
+        id: tag-frontendangular-docker
+        run: docker tag ${{ env.REPO_DOCKER_HUB }}/station-front-nginx:latest ${{ env.REPO_DOCKER_HUB }}/station-front-nginx:${{ github.event.inputs.docker_project_version}}"
+ 
+            
+      - name: Push frontendangular docker
+        id: tag-frontendangular-docker
+        run: docker push ${{ env.REPO_DOCKER_HUB }}/station-front-nginx:${{ github.event.inputs.docker_project_version}}
+  
+            
  
    # Push station front to dockerhub
   tag_version_git:
@@ -287,12 +292,14 @@ jobs:
           path: current
           token: ${{ steps.get_workflow_token.outputs.token }}
     
-      - name: Tag Push Git
-        id: push-tag-git
-        run: |
-            git tag -a v${{ github.event.inputs.docker_project_version}}-m "Version ${{ github.event.inputs.docker_project_version}}"
-
-            git push origin v${{ github.event.inputs.docker_project_version}}
-  
+      - name: Tag git source
+        id: tag-git-source
+        run: git tag -a v${{ github.event.inputs.docker_project_version}}-m "Version ${{ github.event.inputs.docker_project_version}}"
         working-directory: current/application
+
+      - name: Push git source
+        id: push-git-source
+        run: git push origin v${{ github.event.inputs.docker_project_version}}
+        working-directory: current/application
+
  
