--- a/.github/workflows/build-stationapplication.yaml
+++ b/.github/workflows/build-stationapplication.yaml
@@ -150,6 +150,11 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASS }}
 
+      - name: Debug karim
+        id: debug-karim
+        run: ls
+        working-directory: current/application/spring-java/StationDemoWeb/docker
+
       - name: Build Backenddocker
         id: build-backend-docker
         run: docker build -t ${{ env.REPO_DOCKER_HUB }}/station-back .
