--- a/application/spring-java/StationDemoWeb/docker/Dockerfile
+++ b/application/spring-java/StationDemoWeb/docker/Dockerfile
@@ -6,7 +6,7 @@ MAINTAINER Karim GZ "kagzouli@exaka.com"
 RUN  wget -O mariadb-java-client-2.5.2.jar "https://repo1.maven.org/maven2/org/mariadb/jdbc/mariadb-java-client/2.5.2/mariadb-java-client-2.5.2.jar"
 RUN cp mariadb-java-client-2.5.2.jar /usr/local/tomcat/lib/mariadb-java-client-2.5.2.jar
 
-ADD bin/setenv.sh /usr/local/tomcat/bin/setenv.sh
+ADD bin-set/setenv.sh /usr/local/tomcat/bin/setenv.sh
 ADD conf/context.xml /usr/local/tomcat/conf/context.xml
 ADD conf/server.xml /usr/local/tomcat/conf/server.xml
 ADD conf/web.xml /usr/local/tomcat/conf/web.xml
