--- a/.github/workflows/build-stationapplication.yaml
+++ b/.github/workflows/build-stationapplication.yaml
@@ -292,14 +292,12 @@ jobs:
           path: current
           token: ${{ steps.get_workflow_token.outputs.token }}
     
-      - name: Tag git source
-        id: tag-git-source
-        run: git tag -a v${{ github.event.inputs.docker_project_version}} -m "Version ${{ github.event.inputs.docker_project_version}}"
-        working-directory: current/application
 
-      - name: Push git source
-        id: push-git-source
-        run: git push origin v${{ github.event.inputs.docker_project_version}}
+      - name: Tag and push git source
+        id: tag-git-version
+        uses: mathieudutour/github-tag-action@v6.0
+        with:
+          custom_tag: v${{ github.event.inputs.docker_project_version}}
+          github_token: ${{ steps.get_workflow_token.outputs.token }}
         working-directory: current/application
-
  
