--- a/.github/workflows/build-stationapplication.yaml
+++ b/.github/workflows/build-stationapplication.yaml
@@ -296,7 +296,9 @@ jobs:
       - name: Tag and push git source
         id: tag-git-version
         uses: mathieudutour/github-tag-action@v6.0
+        if: github.ref == 'refs/heads/master'
         with:
-          custom_tag: v${{ github.event.inputs.docker_project_version}}
+          custom_tag: ${{ github.event.inputs.docker_project_version}}
+          tag_prefix: v
           github_token: ${{ steps.get_workflow_token.outputs.token }}
  
