--- a/.github/workflows/delete-ecr.yaml
+++ b/.github/workflows/delete-ecr.yaml
@@ -25,34 +25,11 @@ jobs:
 
   # Delete ECR
   delete_ecr:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@v3
-
-      - name: Setup Terraform
-        id: setup_terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: ${{ env.TERRAFORM_VERSION}} 
-          terraform_wrapper: false
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ github.event.inputs.region}}
-          role-duration-seconds: 3600
-
-
-      - name: ecr init
-        id: init-ecr
-        run: terraform init -backend-config="backends/${{ github.event.inputs.environment}}_backend.tfvars" 
-        working-directory: terraformaws/ecr
-
-      - name: ecr destroy
-        id: destroy-ecr
-        run: terraform destroy -auto-approve  --lock=false --var-file=../vars/${{ github.event.inputs.environment}}.tvars
-        working-directory: terraformaws/ecr
+    uses: ./.github/workflows/reuse/terraform-aws-delete-reusable.yaml
+    with:
+      environment: ${{ github.event.inputs.environment}}
+      region: ${{ github.event.inputs.region}}
+      component: "ecr"
+    secrets:
+      aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      aws_secret_key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
