--- a/.github/workflows/terraform-aws-apply-reusable.yaml
+++ b/.github/workflows/terraform-aws-apply-reusable.yaml
@@ -48,6 +48,10 @@ jobs:
           aws-region: ${{ github.event.inputs.region}}
           role-duration-seconds: 3600
 
+      - name: Debug
+        id: debug-karim
+        run:  echo ${{ github.event.inputs.component}}
+
       - name: init
         id: init
         run: terraform init  -backend-config="backends/${{ github.event.inputs.environment}}_backend.tfvars"
