--- a/.github/workflows/terraform-aws-apply-reusable.yaml
+++ b/.github/workflows/terraform-aws-apply-reusable.yaml
@@ -45,25 +45,25 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.aws_access_key }}
           aws-secret-access-key: ${{ secrets.aws_secret_key }}
-          aws-region: ${{ github.event.inputs.region}}
+          aws-region: ${{ inputs.region}}
           role-duration-seconds: 3600
 
       - name: Debug
         id: debug-karim
-        run:  echo ${{ github.event.inputs.component}},${{ github.event.inputs.region}}
+        run:  echo ${{ inputs.component}},${{ inputs.region}}
 
       - name: init
         id: init
-        run: terraform init  -backend-config="backends/${{ github.event.inputs.environment}}_backend.tfvars"
-        working-directory: terraformaws/${{ github.event.inputs.component}}
+        run: terraform init  -backend-config="backends/${{ inputs.environment}}_backend.tfvars"
+        working-directory: terraformaws/${{ inputs.component}}
 
       - name: plan
         id: plan
-        run: terraform plan  --lock=false --var-file=../vars/${{ github.event.inputs.environment}}.tvars
-        working-directory: terraformaws/${{ github.event.inputs.component}}
+        run: terraform plan  --lock=false --var-file=../vars/${{ inputs.environment}}.tvars
+        working-directory: terraformaws/${{ inputs.component}}
 
       - name: apply
         id: apply
-        run: terraform apply -auto-approve  --lock=false --var-file=../vars/${{ github.event.inputs.environment}}.tvars
-        working-directory: terraformaws/${{ github.event.inputs.component}}
+        run: terraform apply -auto-approve  --lock=false --var-file=../vars/${{ inputs.environment}}.tvars
+        working-directory: terraformaws/${{ inputs.component}}
       
