--- a/.github/workflows/terraform-aws-destroy-reusable.yaml
+++ b/.github/workflows/terraform-aws-destroy-reusable.yaml
@@ -45,16 +45,16 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.aws_access_key }}
           aws-secret-access-key: ${{ secrets.aws_secret_key }}
-          aws-region: ${{ github.event.inputs.region}}
+          aws-region: ${{ inputs.region}}
           role-duration-seconds: 3600
 
       - name: init
         id: init
-        run: terraform init  -backend-config="backends/${{ github.event.inputs.environment}}_backend.tfvars"
-        working-directory: terraformaws/${{ github.event.inputs.component}}
+        run: terraform init  -backend-config="backends/${{ inputs.environment}}_backend.tfvars"
+        working-directory: terraformaws/${{ inputs.component}}
 
       - name: destroy
         id: destroy
-        run: terraform destroy -auto-approve  --lock=false --var-file=../vars/${{ github.event.inputs.environment}}.tvars
-        working-directory: terraformaws/${{ github.event.inputs.component}}
+        run: terraform destroy -auto-approve  --lock=false --var-file=../vars/${{ inputs.environment}}.tvars
+        working-directory: terraformaws/${{ inputs.component}}
       
